kingdomlikes.com (archived on 2019-06-11)
{
  "alexa_rank": 62306,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 5940,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.37,
  "homepage_snapshot_redirected_domain": "kingdomlikes.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190309072131id_/https://kingdomlikes.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190309072131id_/http%3A//kingdomlikes.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "kingdomlikes.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190611091419id_/https%3A//kingdomlikes.com/privacy",
  "policy_title": "Privacy Policy",
  "policy_url": "kingdomlikes.com/privacy",
  "sha1": "cb3ce6d5b73d112f2c3f0524d84df97b433528c5",
  "simhash": 13483497918066006864,
  "simhash_updated": false,
  "site_hostname": "kingdomlikes.com",
  "site_url": "http://kingdomlikes.com",
  "smog": 12.1,
  "strict_updated": false,
  "timestamp": "20190611091419",
  "word_count": 990,
  "year": 2019
}

--- a/k/ki/kin/kingdomlikes.com.html
+++ b/k/ki/kin/kingdomlikes.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the kingdomlikes.com privacy policy that was archived on 2018-11-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181116031631id_/https%3A//kingdomlikes.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the kingdomlikes.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611091419id_/https%3A//kingdomlikes.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html prefix="og: https://ogp.me/ns#"><head>
     <meta charset="utf-8">
-    <meta name="keywords" content="Facebook Likes, Facebook Followers, Facebook Post Likes, Facebook Post Share, YouTube View, YouTube Subscribers, YouTube Video Likes, YouTube Video Favorites, Google+ Circles, Twitter Followers, Twitter Tweets, Twitter reTweets, Twitter Favorites, Instagram Followers, Instagram Photo Likes, Pinterest Followers, Pinterest rePins, Pinterest Likes, SoundCloud Followers, SoundCloud Music Listening, Website Hits, Autosurf">
-    <meta name="description" content="With KingdomLikes you can get free facebook likes, twitter followers, youtube views, subscribe, likes, instagram likes, instagram followers,twitter retweets and favorites vine, soundcloud, stumbleupon followers">	
+    <meta name="keywords" content="Facebook Likes, Facebook Followers, Facebook Post Likes, Facebook Photo Likes, YouTube View, YouTube Subscribers, YouTube Video Likes, YouTube Video Favorites, Twitter Followers, Twitter Tweets, Twitter reTweets, Twitter Likes, Instagram Followers, Instagram Likes, Pinterest Followers, Pinterest rePins, SoundCloud Followers, SoundCloud Music Listening, SoundCloud Likes, Website Hits, Autosurf">
+    <meta name="description" content="With KingdomLikes you can get free facebook likes, get Instagram Likes, get Youtube views, get Twitter Followers, get Facebook Photo Likes, Youtube Subscribers, get Twitter Likes and retweets, Instagram Followers , get SoundCloud Plays, SoundCloud Followers, SoundCloud Likes">	
     <meta name="Author" content="KingdomLikes">
     <meta name="viewport" content="width=device-width, user-scalable=no">
     <meta name="google-translate-customization" content="3b804c356a92eddd-ff13ca37f197cd5e-gb135618ed701ec36-14">
     <meta property="og:image" content="https://kingdomlikes.com/images/KINGLIKE1024.png">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:description" content="With KingdomLikes you can get free facebook likes, twitter followers, youtube views, subscribe, likes, pinterest, instagram, vine, soundcloud, stumbleupon followers">
+    <meta property="og:description" content="With KingdomLikes you can get free facebook likes, get Instagram Likes, get Youtube views, get Twitter Followers, get Facebook Photo Likes, Youtube Subscribers, get Twitter Likes and retweets, Instagram Followers , get SoundCloud Plays, SoundCloud Followers, SoundCloud Likes">
     <title>Privacy Policy</title>
         <link media="all" type="text/css" rel="stylesheet" href="https://kingdomlikes.com/css/style10.min.css">
     <link rel="icon" href="https://kingdomlikes.com/images/faviocon.png">
@@ -75,7 +75,7 @@
                 <span><input name="remember-me" type="checkbox" checked="true" value="1"> Remember me | <a id="go" rel="leanModal" href="#signup">Register</a></span>
                 <span><a rel="leanModal" id="fs" href="#forgotpass">Forgot my password?</a></span>
             </div>
-            <input type="hidden" name="_token" value="8lv5ASCcxiYGL1L1Dm74LBgjs1s2cBe3haSiGoeK">
+            <input type="hidden" name="_token" value="cZhiW22BMkwy4qtzpOntFGeCZq3eGQ8Jyw9Jyuue">
         </form>
             </div>
 </header>
@@ -140,17 +140,17 @@
 
     <div class="clear"></div>    
 
-<div id="google_translate_element" style="position: fixed;bottom: 2%;right: 2%;"></div><script type="text/javascript">
+<!--<div id="google_translate_element" style="position: fixed;bottom: 2%;right: 2%;"></div><script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
     }
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>-->
 
 <section class="footer">
     <div class="content">
         <footer>
             <div style="display: inline-block;">
-                <p>©  KingdomLikes 2017 • All right Register •&nbsp;</p><p><a href="https://kingdomlikes.com">FREE Social Promotion</a></p>
+                <p>©  KingdomLikes 2019 • All right Register •&nbsp;</p><p><a href="https://kingdomlikes.com">FREE Social Promotion</a></p>
             </div>
             <div class="clear"></div>
             <div style="display: inline-block">
@@ -206,7 +206,7 @@
 </noscript>
                     </div>
                 <input type="submit" class="button blue" value="Submit">
-                <input type="hidden" name="_token" value="8lv5ASCcxiYGL1L1Dm74LBgjs1s2cBe3haSiGoeK">
+                <input type="hidden" name="_token" value="cZhiW22BMkwy4qtzpOntFGeCZq3eGQ8Jyw9Jyuue">
                 <div class="left" style="position:relative;width: 100%;cursor: pointer;text-decoration: underline;margin: 0 0 7px 0" onclick="changeConfirmation()">Re-send Email Confirmation.</div>
             </form>
         </div>
@@ -222,7 +222,7 @@
                 <p>Please, enter your email</p>
                 <input type="email" name="forgotemail" id="forgotemail" placeholder="Email">
                 <input type="submit" class="button blue" value="Submit">
-                <input type="hidden" name="_token" value="8lv5ASCcxiYGL1L1Dm74LBgjs1s2cBe3haSiGoeK">
+                <input type="hidden" name="_token" value="cZhiW22BMkwy4qtzpOntFGeCZq3eGQ8Jyw9Jyuue">
             </form>
         </div>
 
@@ -235,7 +235,7 @@
                 <p>Please, enter your email</p>
                 <input type="email" name="forgotemail" id="resendemail" placeholder="Email">
                 <input type="submit" class="button blue" value="Submit">
-                <input type="hidden" name="_token" value="8lv5ASCcxiYGL1L1Dm74LBgjs1s2cBe3haSiGoeK">
+                <input type="hidden" name="_token" value="cZhiW22BMkwy4qtzpOntFGeCZq3eGQ8Jyw9Jyuue">
             </form>
         </div>
         
