--- a/a/ar/ara/araboo.com.html
+++ b/a/ar/ara/araboo.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the araboo.com privacy policy that was archived on 2018-12-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181209061840id_/http%3A//www.araboo.com/main/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the araboo.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611092809id_/http%3A//araboo.com/main/privacy.asp) for the most accurate reproduction.-->
 
 <html><head><script type="text/javascript">
 window.google_analytics_uacct = "UA-418318-2";
@@ -42,7 +42,7 @@ window.google_analytics_uacct = "UA-418318-2";
 </td>
 <td width="12" nowrap=""></td>
 <td width="330" align="center" nowrap="">
-<table border="0" cellpadding="2" cellspacing="3"><tbody><tr><td></td></tr></tbody></table><a href="http://www.nitaqat.com/" target="_blank" style="font-family:Verdana,Arial;font-size:13px;text-decoration:none"><img border="0" src="/pages/nitaqat/i/nitaqat-40.jpg" alt="Nitaqat - Premium Domains" title="Nitaqat - Premium Domains"><br><b>Arab Premium Domains</b></a><table border="0" cellpadding="1" cellspacing="2"><tbody><tr><td></td></tr></tbody></table>
+<table border="0" cellpadding="2" cellspacing="3"><tbody><tr><td></td></tr></tbody></table><a href="http://www.nitaqat.com/" rel="nofollow" target="_blank" style="font-family:Verdana,Arial;font-size:13px;text-decoration:none"><img border="0" src="/pages/nitaqat/i/nitaqat-40.jpg" alt="Nitaqat - Premium Domains" title="Nitaqat - Premium Domains"><br><b>Arab Premium Domains</b></a><table border="0" cellpadding="1" cellspacing="2"><tbody><tr><td></td></tr></tbody></table>
 </td>
 </tr></tbody></table>
 
@@ -108,7 +108,7 @@ window.google_analytics_uacct = "UA-418318-2";
 
 
 
-<td width="90%" nowrap="" align="right">December 9, 2018</td>
+<td width="90%" nowrap="" align="right">June 11, 2019</td>
 </tr></tbody></table>
 
 
@@ -453,7 +453,7 @@ and/or privacy notice for specific services. In addition to the above, such purp
 - <a href="/dir/help-search.asp" class="TopInfo">Help</a>
 </td>
 <td align="right">
-© 2001 - 2018 Araboo.com. All rights reserved.
+© 2001 - 2019 Araboo.com. All rights reserved.
 </td>
 </tr>
 </tbody></table>
