--- a/f/fa/fan/fancyquiz.com.html
+++ b/f/fa/fan/fancyquiz.com.html
@@ -1,21 +1,21 @@
-<!--The following is the downloaded HTML source of the fancyquiz.com privacy policy that was archived on 2017-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170506080124id_/http%3A//fancyquiz.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fancyquiz.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611093558id_/http%3A//www.fancyquiz.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="csrf-param" content="_csrf">
-    <meta name="csrf-token" content="LXRmTmJJOENiIVIXBRx1NV8CEgEPO1oZWRIfJw5wUjVaDC49MSoOMw==">
+    <meta name="csrf-token" content="Gg4-JzEr239n2uNpcD9zwnzlUZmQjbqlnc7gtLixR398THpkfGmcLQa5mz07cCyYBLI9wKf4iZKl_rb5wNY0TA==">
     <title>FancyQuiz - Privacy Policy</title>
-    <link href="/assets/03f25d272a4e86f10e905e7b35372015/css/bootstrap.css" rel="stylesheet">
-<link href="http://web2.hostingcdn.com/fqwertyq/css/style.css" rel="stylesheet">
-<link href="http://web2.hostingcdn.com/qsg/css/quiz-generator.css" rel="stylesheet">
-<script type="text/javascript" async="" defer="" src="//fagc.fancyquiz.com/piwik/piwik.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js"></script><script src="/assets/851b46a2d3c9c94f9ae7cd710d1adde6/jquery.js"></script>
-<script src="/assets/644804cd8847871d928cba0861384809/yii.js"></script>
-<script src="http://web2.hostingcdn.com/qsg/js/jquery.jcookie.min.js"></script>
-<script src="http://web2.hostingcdn.com/qsg/js/escript.js"></script>
-<script src="http://web2.hostingcdn.com/qsg/js/quizzes.js"></script>
-<script src="http://web2.hostingcdn.com/fqwertyq/js/js.js"></script>    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" crossorigin="anonymous">
+    <link href="/assets/485757b8c07a2d85f483695f765a5102/css/bootstrap.css" rel="stylesheet">
+<link href="https://c2.hostingcdn.com/fqwertyq/css/style.css" rel="stylesheet">
+<link href="https://c2.hostingcdn.com/qsg/css/quiz-generator.css" rel="stylesheet">
+<script id="facebook-jssdk" src="//connect.facebook.net/en_US/sdk.js"></script><script src="/assets/dd13cf9e783cb01a69129981298c31c2/jquery.js"></script>
+<script src="/assets/ab7dc7ea025a2ffbc3709be290c60d69/yii.js"></script>
+<script src="https://c2.hostingcdn.com/qsg/js/jquery.jcookie.min.js"></script>
+<script src="https://c2.hostingcdn.com/qsg/js/escript.js"></script>
+<script src="https://c2.hostingcdn.com/qsg/js/quizzes.js"></script>
+<script src="https://c2.hostingcdn.com/fqwertyq/js/js.js"></script>    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" crossorigin="anonymous">
 </head>
 <body>
 
@@ -155,7 +155,7 @@
 				<div class="signin-content">
 					<span style="font-size:50px">Hello, Friend</span><br>
 					<span style="font-size:25px">Start Your Day Inspired with</span><br>
-					<img src="http://web2.hostingcdn.com/fqwertyq/images/logo.png">
+					<img src="https://c2.hostingcdn.com/fqwertyq/images/logo.png">
 
 					
 											<a id="fb-login" class="singnin-link-fb" href="javascript:void(0)"></a>
@@ -174,11 +174,11 @@
     <nav id="w0" class="navbar-inverse navbar-fixed-top navbar"><div class="container"><div class="navbar-header"><button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#w0-collapse"><span class="sr-only">Toggle navigation</span>
 <span class="icon-bar"></span>
 <span class="icon-bar"></span>
-<span class="icon-bar"></span></button><a class="navbar-brand" href="/"><img src="http://web2.hostingcdn.com/fqwertyq/images/logo.png"></a></div><div id="w0-collapse" class="collapse navbar-collapse"><ul id="w1" class="navbar-nav navbar-right nav"><li><a href="/quiz">Quizzes</a></li>
+<span class="icon-bar"></span></button><a class="navbar-brand" href="/"><img src="https://c2.hostingcdn.com/fqwertyq/images/logo.png"></a></div><div id="w0-collapse" class="collapse navbar-collapse"><ul id="w1" class="navbar-nav navbar-right nav"><li><a href="/quiz">Quizzes</a></li>
 <li><a href="/hscope">Horoscopes</a></li>
 <li><a href="/tarot">Tarot</a></li>
 <li><a href="/life-and-style">Life &amp; Style</a></li>
-<li><a href="/premium">Premium</a></li>
+<li><a href="/site/premium">Premium</a></li>
 <li><a href="javascript:void(0)" onclick="showSignInLightbox()">Login</a></li>
 <li>
 						<div class="fgw_search_wrapper"><div id="search_container" class="sfw_container">
@@ -255,7 +255,7 @@
 
 
 
-<footer class="footer"><div class="container"><div class="row"><div class="col-sm-6"><img src="http://web2.hostingcdn.com/fqwertyq/images/logo.png"></div><div class="col-sm-6 text-right">© FancyQuiz. All Rights Reserved.</div></div><div class="row"><div class="col-sm-2 col-xs-6"><ul id="w2" class="nav-foot nav" activateitems=""><li><a href="/quiz">Quizzes</a></li>
+<footer class="footer"><div class="container"><div class="row"><div class="col-sm-6 footer-logo"><img src="https://c2.hostingcdn.com/fqwertyq/images/logo.png"></div><div class="col-sm-6 text-right">© FancyQuiz. All Rights Reserved.</div></div><div class="row"><div class="col-sm-2 col-xs-6"><ul id="w2" class="nav-foot nav" activateitems=""><li><a href="/quiz">Quizzes</a></li>
 <li><a href="/hscope">Horoscopes</a></li>
 <li><a href="/tarot">Tarot</a></li>
 <li><a href="/life-and-style">Life &amp; Style</a></li></ul></div><div class="col-sm-2 col-xs-6"><ul id="w3" class="nav-foot nav" activateitems=""><li><a href="/terms-of-use">Terms</a></li>
@@ -263,22 +263,7 @@
 <li><a href="/copyright-policy">Copyright</a></li>
 <li><a href="/uninstall">Uninstall</a></li>
 <li><a href="/about">About</a></li>
-<li><a href="/contact">Contact</a></li></ul></div></div></div></footer><script>var addthis_share = { email_template: "quizzes_template", email_vars: { LogoUrl: "http://web2.hostingcdn.com/fqwertyq/images/logo.png", ProjectUrl: "www.fancyquiz.com", } }</script><script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5776459fef25e3e7"></script>
-<script src="/assets/03f25d272a4e86f10e905e7b35372015/js/bootstrap.js"></script><!-- Piwik -->
-<script type="text/javascript">
- var _paq = _paq || [];
- _paq.push(["setDomains", ["*.fancyquiz.com","*.www.fancyquiz.com"]]);
- _paq.push(['trackPageView']);
- _paq.push(['enableLinkTracking']);
- (function() {
- var u="//fagc.fancyquiz.com/piwik/";
- _paq.push(['setTrackerUrl', u+'piwik.php']);
- _paq.push(['setSiteId', '100']);
- var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
- g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
- })();
-</script>
-<noscript><p><img src="//fagc.fancyquiz.com/piwik/piwik.php?idsite=100" style="border:0;" alt="" /></p></noscript>
-<!-- End Piwik Code -->
+<li><a href="/contact">Contact</a></li></ul></div></div></div></footer><script>var addthis_share = { email_template: "quizzes_template", email_vars: { LogoUrl: "https://c2.hostingcdn.com/fqwertyq/images/logo.png", ProjectUrl: "www.fancyquiz.com", } }</script><script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5776459fef25e3e7"></script>
+<script src="/assets/485757b8c07a2d85f483695f765a5102/js/bootstrap.js"></script>
 
 </body></html>
