allmathsgames.com (archived on 2019-06-11)
{
  "alexa_rank": 876672,
  "analysis_subcorpus": true,
  "categories": "education;games",
  "char_count": 10860,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.02,
  "homepage_snapshot_redirected_domain": "allmathsgames.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190126121428id_/http://www.allmathsgames.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190126121428id_/http%3A//allmathsgames.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "allmathsgames.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190611095617id_/http%3A//www.allmathsgames.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "allmathsgames.com/privacy-policy",
  "sha1": "29442d9c2ae53bc3e122b9dc62c40b89021678e7",
  "simhash": 11293267936250838975,
  "simhash_updated": false,
  "site_hostname": "allmathsgames.com",
  "site_url": "http://allmathsgames.com",
  "smog": 14.22,
  "strict_updated": false,
  "timestamp": "20190611095617",
  "word_count": 1804,
  "year": 2019
}

--- a/a/al/all/allmathsgames.com.html
+++ b/a/al/all/allmathsgames.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the allmathsgames.com privacy policy that was archived on 2018-12-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181210135938id_/http%3A//www.allmathsgames.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the allmathsgames.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611095617id_/http%3A//www.allmathsgames.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
     	<!--HEAD START-->
@@ -14,13 +14,31 @@
 	<script type="text/javascript" src="http://www.allmathsgames.com/assets/js/all.js"></script>
 	<script type="text/javascript" src="http://www.allmathsgames.com/assets/js/jquery-3.3.1.min.js"></script>
 	<script src="http://www.allmathsgames.com/assets/js/bootstrap.min.js"></script>
-    <script src="http://www.allmathsgames.com/assets/js/minify.js?v=7"></script>
+    <script src="http://www.allmathsgames.com/assets/js/minify.js?v=10"></script>
 
 	<link href="http://www.allmathsgames.com/assets/img/icon.png" rel="shortcut icon" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="http://www.allmathsgames.com/assets/css/minify.css?v=4">
+	<link rel="stylesheet" type="text/css" href="http://www.allmathsgames.com/assets/css/style.css?v=10">
 
-    	<!--HEAD END-->
+	<link rel="canonical" href="http://www.allmathsgames.com/privacy-policy">
 
+    	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-155619-53"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-155619-53');
+	</script>
+	<!--HEAD END-->
+
+	<script type="text/javascript" charset="utf-8">
+	    $(function () {
+	        $(".lazyload").lazyload();
+	    });
+	</script>
+    <meta name="robots" content="noindex, follow">
 </head>
 <body>
 
@@ -55,8 +73,8 @@
 <div class="container full-w-mob">
     <nav id="navbar-menu" class="navbar-menu">
     <ul class="navbar-menu-nav">
-        <li class="nav-menu-item"><a href="http://www.allmathsgames.com/papas-games" class="btn-clr-yellow"><span>Papa's Games</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/io-games" class="btn-clr-red"><span>IO Games</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/cool-math-run" class="btn-clr-darkblue"><span>Cool Math Run</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/minecraft" class="btn-clr-brown"><span>Minecraft</span></a> </li>            <div id="moremenu">
-                    <li class="nav-menu-item"><a href="http://www.allmathsgames.com/math-playground" class="btn-clr-green"><span>Math Playground</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/cool-math-games" class="btn-clr-blue"><span>Cool Math Games</span></a> </li>        </div>
+        <li class="nav-menu-item"><a href="http://www.allmathsgames.com/papas-games" class="btn-clr-yellow"><span>Papa's Games</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/fun-math-games" class="btn-clr-blue"><span>Fun math games</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/io-games" class="btn-clr-red"><span>IO Games</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/cool-math-run" class="btn-clr-darkblue"><span>Cool Math Run</span></a> </li>            <div id="moremenu">
+                    <li class="nav-menu-item"><a href="http://www.allmathsgames.com/minecraft" class="btn-clr-brown"><span>Minecraft</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/math-playground" class="btn-clr-green"><span>Math Playground</span></a> </li><li class="nav-menu-item"><a href="http://www.allmathsgames.com/cool-math-games" class="btn-clr-blue"><span>Cool Math Games</span></a> </li>        </div>
         <li class="nav-menu-item"><a id="btn-more" class="btn-more" onclick="menu_toggle('moremenu')"><span id="more-less">more</span>
                 <i class="fas fa-angle-down down-arr" aria-hidden="true"></i>&nbsp;</a> </li>
     </ul>
@@ -201,23 +219,23 @@ Combination of Personal Information<br>
         <div class="row">
                     	<div class="col-md-3 col-sm-6 col-xs-6 footer-menu-col">
         		<ul>
-              <h5>Math Games</h5>
-          	<li><a href="http://www.allmathsgames.com/papas-games" title="">Papa's Games</a></li> <li><a href="http://www.allmathsgames.com/io-games" title="">IO Games</a></li> <li><a href="http://www.allmathsgames.com/cool-math-run" title="">Cool Math Run</a></li> <li><a href="http://www.allmathsgames.com/minecraft" title="">Minecraft</a></li>           		</ul>
+              <h5><b>Math Games</b></h5>
+          	<li><strong><a href="http://www.allmathsgames.com/papas-games" title="">Papa's Games</a></strong></li> <li><strong><a href="http://www.allmathsgames.com/fun-math-games" title="">Fun math games</a></strong></li> <li><strong><a href="http://www.allmathsgames.com/io-games" title="">IO Games</a></strong></li> <li><strong><a href="http://www.allmathsgames.com/cool-math-run" title="">Cool Math Run</a></strong></li>           		</ul>
             </div>
           	          	<div class="col-md-3 col-sm-6 col-xs-6 footer-menu-col">
         		<ul>
-              <h5>Account</h5>
+              <h5><b>Account</b></h5>
           	<li><a href="memberLogin" title="Login">Member Login</a></li><li><a href="parentLogin" title="Parent Login">Parent Login</a></li>          		</ul>
             </div>
           	          	<div class="col-md-3 col-sm-6 col-xs-6 footer-menu-col">
         		<ul>
-              <h5>Watch Videos</h5>
-          	<li><a href="videos" title="videos">Videos</a></li>          		</ul>
+              <h5><b>Partners</b></h5>
+          	<li><em><a href="http://www.hotmathgames.net" title="hotmathgames" target="_blank">Hot Math Games</a></em></li>          		</ul>
             </div>
           	          	<div class="col-md-3 col-sm-6 col-xs-6 footer-menu-col">
         		<ul>
-              <h5>Legal</h5>
-          	<li><a href="http://www.allmathsgames.com/privacy-policy" title="Privacy Policy">Privacy Policy</a></li><li><a href="http://www.allmathsgames.com/information-for-parents" title="Parents Information">Parents Information</a></li><li><a href="http://www.allmathsgames.com/terms-of-use" title="Terms of Use">Terms of Use</a></li><li><a href="http://www.allmathsgames.com/privacy-policy-kids-parents" title="Privacy Policy for Kids &amp; Parents">Privacy Policy (Kids &amp; Parents)</a></li>          		</ul>
+              <h5><b>Legal</b></h5>
+          	<li><em><a href="http://www.allmathsgames.com/privacy-policy" title="Privacy Policy">Privacy Policy</a></em></li><li><em><a href="http://www.allmathsgames.com/information-for-parents" title="Parents Information">Parents Information</a></em></li><li><em><a href="http://www.allmathsgames.com/terms-of-use" title="Terms of Use">Terms of Use</a></em></li><li><em><a href="http://www.allmathsgames.com/privacy-policy-kids-parents" title="Privacy Policy for Kids &amp; Parents">Privacy Policy (Kids &amp; Parents)</a></em></li>          		</ul>
             </div>
           	        </div>
         </div>
