academicsuperstore.com (archived on 2019-06-11)
{
  "alexa_rank": 716480,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 30474,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 16.12,
  "homepage_snapshot_redirected_domain": "academicsuperstore.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190317104832id_/http://academicsuperstore.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190317104832id_/http%3A//academicsuperstore.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "academicsuperstore.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190611105428id_/http%3A//academicsuperstore.com/page/privacy",
  "policy_title": "Academic Superstore : Academic Software discounts for students, teachers and schools",
  "policy_url": "academicsuperstore.com/page/privacy",
  "sha1": "f39637c386e07b340c44cb961e3895b87153208a",
  "simhash": 10465636704458221569,
  "simhash_updated": false,
  "site_hostname": "academicsuperstore.com",
  "site_url": "http://academicsuperstore.com",
  "smog": 17.51,
  "strict_updated": false,
  "timestamp": "20190611105428",
  "word_count": 4923,
  "year": 2019
}

--- a/a/ac/aca/academicsuperstore.com.html
+++ b/a/ac/aca/academicsuperstore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the academicsuperstore.com privacy policy that was archived on 2018-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181211005956id_/http%3A//www.academicsuperstore.com/page/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the academicsuperstore.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611105428id_/http%3A//academicsuperstore.com/page/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <!-- Required meta tags -->
@@ -542,13 +542,13 @@ ul.newmenu li:last-child {
 </li><li class="linkCont right-menu">					    <a href="/products/FileMaker" id="mfg-239417">FileMaker</a><ul>
 <li class="menuItem"><a href="/products/FileMaker/251574">FileMaker Advanced</a></li></ul>
 </li><li class="linkCont right-menu">					    <a href="/products/Microsoft" id="mfg-239538">Microsoft</a><ul>
-<li class="menuItem"><a href="/products/Microsoft/279023">Office</a></li><li class="menuItem"><a href="/products/Microsoft/245955">Office for Macintosh</a></li><li class="menuItem"><a href="/products/Microsoft/251209">Keyboards</a></li><li class="menuItem"><a href="/products/Microsoft/296586">Adapter</a></li><li class="menuItem"><a href="/products/Microsoft/293679">Computers</a></li><li class="menuItem"><a href="/products/Microsoft/245273">Excel</a></li><li class="menuItem"><a href="/products/Microsoft/285021">IT Academy</a></li><li class="menuItem"><a href="/products/Microsoft/245895">Word</a></li><li class="menuItem"><a href="/products/Microsoft/245989">Visual Studio</a></li><li class="menuItem"><a href="/products/Microsoft/293654">Surface</a></li><li class="menuItem"><a href="/products/Microsoft/296788">Keyboard Covers</a></li><li class="menuItem"><a href="/products/Microsoft/296327">Laser Pointers</a></li><li class="menuItem"><a href="/products/Microsoft">View all Titles</a></li></ul>
+<li class="menuItem"><a href="/products/Microsoft/279023">Office</a></li><li class="menuItem"><a href="/products/Microsoft/245955">Office for Macintosh</a></li><li class="menuItem"><a href="/products/Microsoft/293654">Surface</a></li><li class="menuItem"><a href="/products/Microsoft/251209">Keyboards</a></li><li class="menuItem"><a href="/products/Microsoft/296586">Adapter</a></li><li class="menuItem"><a href="/products/Microsoft/273242">Data Analyzer</a></li><li class="menuItem"><a href="/products/Microsoft/245273">Excel</a></li><li class="menuItem"><a href="/products/Microsoft/245895">Word</a></li><li class="menuItem"><a href="/products/Microsoft/245989">Visual Studio</a></li><li class="menuItem"><a href="/products/Microsoft/296997">Headphones</a></li><li class="menuItem"><a href="/products/Microsoft/285021">IT Academy</a></li><li class="menuItem"><a href="/products/Microsoft/296788">Keyboard Covers</a></li><li class="menuItem"><a href="/products/Microsoft">View all Titles</a></li></ul>
 </li><li class="linkCont right-menu">					    <a href="/products/Quark" id="mfg-239636">Quark</a><ul>
 <li class="menuItem"><a href="/products/Quark/240619">QuarkXPress</a></li></ul>
 </li><li class="linkCont right-menu">					    <a href="/products/Sony" id="mfg-239686">Sony</a><ul>
-<li class="menuItem"><a href="/products/Sony/272894">Blu-Ray Devices</a></li><li class="menuItem"><a href="/products/Sony/295620">Bluetooth Headset</a></li><li class="menuItem"><a href="/products/Sony/278201">Earbuds</a></li><li class="menuItem"><a href="/products/Sony/295842">Flat-Screen Wall Mount</a></li><li class="menuItem"><a href="/products/Sony/295886">Game Controller/Joystick</a></li><li class="menuItem"><a href="/products/Sony/254941">Headphones</a></li><li class="menuItem"><a href="/products/Sony/279397">Microphones</a></li><li class="menuItem"><a href="/products/Sony/296494">Paper</a></li><li class="menuItem"><a href="/products/Sony/272890">Speakers</a></li><li class="menuItem"><a href="/products/Sony/277395">TVs</a></li><li class="menuItem"><a href="/products/Sony/296355">Video Production</a></li><li class="menuItem"><a href="/products/Sony/296119">Web Camera</a></li></ul>
+<li class="menuItem"><a href="/products/Sony/272894">Blu-Ray Devices</a></li><li class="menuItem"><a href="/products/Sony/295620">Bluetooth Headset</a></li><li class="menuItem"><a href="/products/Sony/278201">Earbuds</a></li><li class="menuItem"><a href="/products/Sony/295886">Game Controller/Joystick</a></li><li class="menuItem"><a href="/products/Sony/254941">Headphones</a></li><li class="menuItem"><a href="/products/Sony/279397">Microphones</a></li><li class="menuItem"><a href="/products/Sony/272890">Speakers</a></li><li class="menuItem"><a href="/products/Sony/277395">TVs</a></li><li class="menuItem"><a href="/products/Sony/296355">Video Production</a></li><li class="menuItem"><a href="/products/Sony/296119">Web Camera</a></li></ul>
 </li><li class="linkCont right-menu">					    <a href="/products/Symantec" id="mfg-239709">Symantec</a><ul>
-<li class="menuItem"><a href="/products/Symantec/295275">Appliances</a></li><li class="menuItem"><a href="/products/Symantec/295287">Battery</a></li><li class="menuItem"><a href="/products/Symantec/296602">Battery Charger</a></li><li class="menuItem"><a href="/products/Symantec/295276">Cables - 3.5mm</a></li><li class="menuItem"><a href="/products/Symantec/245065">Norton Utilities</a></li><li class="menuItem"><a href="/products/Symantec/295444">Cables - Networking</a></li><li class="menuItem"><a href="/products/Symantec/296055">Camera Accessories</a></li><li class="menuItem"><a href="/products/Symantec/295104">Computer Component</a></li><li class="menuItem"><a href="/products/Symantec/293708">Desktop Email Encryption</a></li><li class="menuItem"><a href="/products/Symantec/294662">Ethernet Switch</a></li><li class="menuItem"><a href="/products/Symantec/294791">Flat-Screen Wall Mount</a></li><li class="menuItem"><a href="/products/Symantec/295445">Furniture</a></li><li class="menuItem"><a href="/products/Symantec">View all Titles</a></li></ul>
+<li class="menuItem"><a href="/products/Symantec/295287">Battery</a></li><li class="menuItem"><a href="/products/Symantec/296602">Battery Charger</a></li><li class="menuItem"><a href="/products/Symantec/295276">Cables - 3.5mm</a></li><li class="menuItem"><a href="/products/Symantec/295444">Cables - Networking</a></li><li class="menuItem"><a href="/products/Symantec/245065">Norton Utilities</a></li><li class="menuItem"><a href="/products/Symantec/296055">Camera Accessories</a></li><li class="menuItem"><a href="/products/Symantec/295104">Computer Component</a></li><li class="menuItem"><a href="/products/Symantec/294662">Ethernet Switch</a></li><li class="menuItem"><a href="/products/Symantec/294791">Flat-Screen Wall Mount</a></li><li class="menuItem"><a href="/products/Symantec/295445">Furniture</a></li><li class="menuItem"><a href="/products/Symantec/295633">KVM Switch</a></li><li class="menuItem"><a href="/products/Symantec/296622">MP3 Accessories</a></li><li class="menuItem"><a href="/products/Symantec">View all Titles</a></li></ul>
 </li><li class="linkCont right-menu">					    <a href="/products/Toon Boom" id="mfg-239732">Toon Boom</a><ul>
 </ul>
 </li>			<li class="linkCont"><a href="/brands">View all 450+ Brands</a></li>
@@ -582,30 +582,13 @@ ul.newmenu li:last-child {
 		</span>
 		<hr>
                     <div id="header-signupBox">
-			<form method="post" action="https://app.icontact.com/icp/signup.php" name="icpsignup" id="icpsignup1013" accept-charset="UTF-8" onsubmit="return verifyRequired1013();">
-				<input type="hidden" name="redirect" value="http://www.icontact.com/www/signup/thanks.html">
-				<input type="hidden" name="errorredirect" value="http://www.icontact.com/www/signup/error.html">
-				<input type="hidden" value="Web_lead" name="[fields_source]">
-				<input type="hidden" value="Unknown" name="[fields_customer_type]">
-				<input type="hidden" value="Academic Superstore" name="[fields_brand]">
-				<input type="hidden" value="YEAR" name="[fields_create_date]">
-				<input type="hidden" value="MONTH" name="[fields_create_date]">
-				<input type="hidden" value="DAY" name="[fields_create_date]">
-				<input type="hidden" value="SOURCE" name="[fields_sourcecode]">
-				<input type="hidden" value="" name="[fields_offer_code]">
-				<input type="hidden" value="" name="[fields_offer_description]">
-				<input type="hidden" value="" name="[fields_chain]">
-				<input type="hidden" name="listid" value="19748">
-				<input type="hidden" name="specialid:19748" value="PF8N">
-				<input type="hidden" name="clientid" value="1485890">
-				<input type="hidden" name="formid" value="1013">
-				<input type="hidden" name="reallistid" value="1">
-				<input type="hidden" name="doubleopt" value="0">
+			<form method="post" action="/home/signup" name="icpsignup" id="icpsignup1013" accept-charset="UTF-8" onsubmit="return verifyRequired1013();">
+
 			<div style="margin-top:-10px; margin-bottom: 10px;">
 			Email Address:<br>
                             <input type="text" placeholder="Email" value="" class="text input_login" name="fields_email" id="email_entry">
 			</div>
-			<div class="button-green" id="signupButton" style="margin-top: 15px; width:60px;" onclick="$('#icpsignup1013').submit();">Sign Up</div>
+			<div class="button-green" id="signupButton" style="margin-top: 15px; width:60px;" onclick="return verifyRequired1013();">Sign Up</div>
                         </form>
                     </div>
 
@@ -613,9 +596,6 @@ ul.newmenu li:last-child {
 
     var icpForm1013 = document.getElementById('icpsignup1013');
 
-if (document.location.protocol === "https:")
-
-	icpForm1013.action = "https://app.icontact.com/icp/signup.php";
 function verifyRequired1013() {
   if (icpForm1013["fields_email"].value == "") {
     icpForm1013["fields_email"].focus();
@@ -623,8 +603,27 @@ function verifyRequired1013() {
     return false;
   }
 
+  var data = {
+    'fields_email' : $('#icpsignup1013 #email_entry').val(),
+  };
 
-return true;
+  $.ajax({
+   	type : 'POST',
+	url : '/home/signup',
+	data : data,
+	success : function(result){
+		if(result.success == 1) {
+		  $('#signupDialog').html('<span class="page_title">Email signup successful!</span>');
+		}
+		console.log(result);
+	},
+	failure : function(){
+		$('#signupDialog').html('<span class="page_title">Email signup failed.</span>');
+		console.log(result);
+        }
+  });
+  return true;
+
 }
 </script>
 
@@ -1049,9 +1048,9 @@ You may write to us in your own language.<br>
 // <![CDATA[
 	gtag('_setAccount', 'UA-796562-1');
 	gtag('_setDomainName', '.academicsuperstore.com');
-	gtag('_setVar', 'sourcecode=s10074;promocode=Academic');
+	gtag('_setVar', 'sourcecode=ACSWEB;promocode=Academic');
 	gtag('_setCustomVar', 1, 'UUMC', 'None-None-None', 2);
-	gtag('_setCustomVar', 2, 'strat', '50', 2);
+	gtag('_setCustomVar', 2, 'strat', '41', 2);
 
 	
 	gtag('_trackPageview');
