--- a/g/ga/gam/gameservers.com.html
+++ b/g/ga/gam/gameservers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gameservers.com privacy policy that was archived on 2018-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181225132857id_/http%3A//www.gameservers.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gameservers.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611110446id_/https%3A//www.gameservers.com/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>
@@ -27,13 +27,13 @@
 		prepay_rates[6] = 0.9;
 		prepay_rates[12] = 0.85;
 	</script>
-	<script src="/js/jquery-3.3.1.js"></script>
-	<script src="/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<script src="/js/jquery-3.4.1.min.js"></script>
+	<script src="/js/bootstrap.min.js?v=3"></script>
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css?v=2">
 	<link rel="stylesheet" type="text/css" href="/css/font-awesome.css">
-	<script type="text/javascript" src="/js/global.js?v=1539958121"></script>
-	<link rel="stylesheet" type="text/css" href="/css/global.css?v=1527873311">
-	<link rel="stylesheet" type="text/css" href="/css/footer.css?v=1527184746">
+	<script type="text/javascript" src="/js/global.js?v=1557428468"></script>
+	<link rel="stylesheet" type="text/css" href="/css/global.css?v=1560185935">
+	<link rel="stylesheet" type="text/css" href="/css/footer.css?v=1552671707">
 		<script>
 				$(document).ready(function () {
 								});
@@ -92,10 +92,8 @@
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#gsNav">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#gsNav" aria-label="toggle-navigation">
+					<i class="fa fa-bars"></i>
 				</button>
 				<a class="navbar-brand" href="/"><img src="/images/site/logo_gameservers.png"></a>
 			</div>
@@ -117,7 +115,7 @@
 			<div id="main" class="container">
 		<div class="row">
 						<div id="sale" class="col-sm-12">
-				<div class="block" style="background-image:url(/images/special/2018sale.png)"> </div>
+				<div class="block" style="background-image:url(/images/special/2019sale.png)"> </div>
 			</div>
 						<div class="col-sm-12 global_message">
 				
@@ -295,7 +293,7 @@
 			VII. Transmittals from Us
 		</h2>
 		<p>
-			We may send you periodic announcements including the details of our existing and new programs. You may opt out of these announcements by contacting&nbsp;<a href="/cdn-cgi/l/email-protection#e391868e8c9586a384828e8690869195869190cd808c8e"><span class="__cf_email__" data-cfemail="4032252d2f36250027212d25332532362532336e232f2d">[email&nbsp;protected]</span></a>&nbsp;or by clicking the opt-out link at the bottom of these emails. If you opt out of these marketing emails, you may still receive system notices and other information that is specifically related to your account.
+			We may send you periodic announcements including the details of our existing and new programs. You may opt out of these announcements by contacting&nbsp;<a href="/cdn-cgi/l/email-protection#f98b9c94968f9cb99e98949c8a9c8b8f9c8b8ad79a9694"><span class="__cf_email__" data-cfemail="3f4d5a5250495a7f585e525a4c5a4d495a4d4c115c5052">[email&nbsp;protected]</span></a>&nbsp;or by clicking the opt-out link at the bottom of these emails. If you opt out of these marketing emails, you may still receive system notices and other information that is specifically related to your account.
 		</p>
 		<h2>
 			VIII. Public Forums, Member Directories, and Internal Messaging:
@@ -383,7 +381,7 @@
 	<div class="container-fluid footer_">
 		<div class="container footer_container">
 			<div class="row">
-				<div class="col-sm-4">
+				<div class="col-lg-4">
 					<div class="footer_links">
 						<div class="footer_links_block">
 							<div>
@@ -465,7 +463,6 @@
 									</li>
 									<li><a href="/contact/">Contact Page</a></li>
 									<li><a class="footer_twitter" href="https://twitter.com/gameservers_com" target="blank">Twitter</a></li>
-									<li><a href="https://forums.gameservers.com">Forums</a></li>
 									<li><a href="/banners/">Link To Us</a></li>
 									<li><a href="https://www.gameservers.com/order/" class="header order_now">Order Now</a></li>
 								</ul>
