--- a/s/sa/sat/satwcomic.com.html
+++ b/s/sa/sat/satwcomic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the satwcomic.com privacy policy that was archived on 2018-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181230191548id_/https%3A//satwcomic.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the satwcomic.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611173227id_/https%3A//satwcomic.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" itemscope="" itemtype="http://schema.org/Product"><head>
 	<meta charset="utf-8">
@@ -115,6 +115,7 @@
 				
 	<div style="width: 100%; max-width: 728px; text-align: center;" class="hidden-xs">
 		
+<a href="https://www.patreon.com/SatW" class="btn" style="color: #052f48; background-color: white; border-color: #f96854;"><ion-icon src="https://satwcomic.com/imgs/Patreon_logomark.svg"></ion-icon> Patreon</a> 
 
 
 	</div>
@@ -225,18 +226,18 @@ We allow third-party companies to serve ads and/or collect certain anonymous inf
 				<a href="https://satwcomic.com/privacy-policy" rel="nofollow">Privacy Policy</a>
 			</div>
 			<br>
-			Copyright © 2009-2018 Scandinavia and the World<br>
+			Copyright © 2009-2019 Scandinavia and the World<br>
 		</footer>
 		
 		
 	</div>
 	
-
+<!-- custom UX --><script src="https://satwcomic.com/UX.js"></script>
 <!-- icon pack --><script src="https://unpkg.com/ionicons@4.3.0/dist/ionicons.js"></script>
 <!-- bootstrap -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 <!-- bootstrap end -->
 <script src="https://satwcomic.com/i_comments.js"></script><script src="https://satwcomic.com/add-translation.js"></script>
 	<script>
