--- a/s/sa/sal/salaryexplorer.com.html
+++ b/s/sa/sal/salaryexplorer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the salaryexplorer.com privacy policy that was archived on 2018-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181208035330id_/http%3A//www.salaryexplorer.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the salaryexplorer.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611175452id_/http%3A//salaryexplorer.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 			<meta charset="UTF-8">
