phpf1.com (archived on 2019-06-11)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education;informationtech",
  "char_count": 3325,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.92,
  "homepage_snapshot_redirected_domain": "phpf1.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190402002800id_/http://www.phpf1.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190402002800id_/http%3A//phpf1.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "phpf1.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190611195648id_/http%3A//www.phpf1.com/privacy-policy.php",
  "policy_title": "Privacy Policy",
  "policy_url": "phpf1.com/privacy-policy.php",
  "sha1": "bc6d4dc3fbf0a4bcbeebb86b7bf0b9c47b2a90b0",
  "simhash": 7273796363936611112,
  "simhash_updated": false,
  "site_hostname": "phpf1.com",
  "site_url": "http://phpf1.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190611195648",
  "word_count": 550,
  "year": 2019
}

--- a/p/ph/php/phpf1.com.html
+++ b/p/ph/php/phpf1.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the phpf1.com privacy policy that was archived on 2018-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181203211510id_/http%3A//www.phpf1.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the phpf1.com privacy policy that was archived on 2019-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190611195648id_/http%3A//www.phpf1.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
    <title>Privacy Policy</title>
@@ -9,8 +9,9 @@
    <meta name="verify-v1" content="tHnT1eOrfydAY5c4T6dsEFDSaSNjxDDPY+EmHltjEEE=">
    <meta name="description" content="PHP F1 - Help in PHP, get PHP code, scripts, tutorials">
    <meta name="keywords" content="php, php code, php scripts, php tutorials, php manual, php help">
-   <link rel="stylesheet" href="http://www.phpf1.com/style/style.css" type="text/css">
+   <link rel="stylesheet" href="http://www.phpf1.com/style/style.css?v=201904241" type="text/css">
    <link rel="shortcut icon" type="image/gif" href="http://www.phpf1.com/style/images/favicon.gif">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
 	<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script language="javascript" type="text/javascript">
 		function getHTTPObject(){
@@ -97,7 +98,13 @@
 		<a href="http://www.smarttechtoday.com/" title="Technology News" target="_blank" onmouseup="doWork(this);">Technology News</a>
 		
 			</div>
-  </div></div><div id="content"><p>Privacy Policy for phpf1.com</p>
+  </div></div><div id="content"><div id="top-menu">
+    <a href="http://www.phpf1.com/index.html">Home</a>
+    <a href="http://www.phpf1.com/product.html">Products</a>
+    <a href="http://www.phpf1.com/tutorial.html">Tutorials</a>
+    <a href="http://www.phpf1.com/download.html">Downloads</a>
+    <a href="http://www.phpf1.com/manual.html">Manual</a>
+</div><p>Privacy Policy for phpf1.com</p>
 <p>The privacy of our visitors to phpf1.com is important to us.</p>
 <p>At phpf1.com, we recognize that privacy of your personal information  is important. Here is information on what types of personal information  we receive and collect when you use and visit phpf1.com, and how we  safeguard your information.&nbsp; We never sell your personal information to  third parties.</p>
 <p>Log Files<br>
@@ -159,10 +166,10 @@ google_ad_height = 600;
 		<a href="http://www.phpf1.com/index.html">Home</a> |
 		<a href="http://www.phpf1.com/privacy-policy.php">Privacy Policy</a>
 	</div>
-	<div class="copyBlock">©2018 PHP F1 - Help in PHP, get PHP code, scripts, tutorials!</div>
+	<div class="copyBlock">©2019 PHP F1 - Help in PHP, get PHP code, scripts, tutorials!</div>
 </div>
 </div>
-<p class="info">Total time: 0.0158</p><script type="text/javascript">
+<p class="info">Total time: 0.0247</p><script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-124083-18']);
